--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@
 .about_img{
     position: relative;
     width: 1920px;
-    height: 800px;
+    height: 950px;
 }
 .about_t1{
     position: absolute;
@@ -51,7 +51,7 @@
     font-size: 16px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 3600%);
+    transform: translate(-50%, 920%);
 }
 .about_img_make{
     position: absolute;
@@ -59,7 +59,7 @@
     height: 250px;
     top: 50%;
     left: 50%;
-    transform: translate(-100%, 350%);
+    transform: translate(-100%, 380%);
     padding-right: 25px;
 }
 .about_img_brush{
@@ -68,7 +68,7 @@
     height: 250px;
     top: 50%;
     left: 50%;
-    transform: translate(0%, 350%);
+    transform: translate(0%, 380%);
 }
 /* TEST */
 .test_t1{
@@ -97,4 +97,20 @@
     margin: 0 auto;
     display: block;
     padding-top: 50px;
+}
+/* footer */
+.foot_img{
+    position: relative;
+    width: 1920px;
+    height: 150px;
+}
+.foot_txt{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    font-family: 'NanumSquare', sans-serif !important;
+    font-size: 14px;
+    font-weight: bold;
+    transform: translate(-50%, 15500%);
 }
